# opentoonz

./: .gitattributes  .gitignore  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
ci-scripts/windows/: OpenToonzRegistrySetup.bat
doc/: README_chs.md  how_to_build_bsd.md  how_to_build_linux.md  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_win.md  how_to_build_win_chs.md  how_to_build_win_ja.md  how_to_test_prs.md  how_to_test_prs_chs.md
plugins/blur/: CMakeLists.txt
plugins/geom/: CMakeLists.txt
plugins/multiplugin/: CMakeLists.txt
scripts/windows/: OpenToonzRegistrySetup.bat
toonz/sources/: .clang-format  CMakeLists.txt
toonz/sources/include/: tpropertytype.h  tsystem.h  ttcpip.h
toonz/sources/mousedragfilter/: CMakeLists.txt
toonz/sources/stdfx/: shaderfx.cpp
toonz/sources/tcleanupper/: tcleanupper.cpp
toonz/sources/tnzbase/: permissionsmanager.cpp
toonz/sources/tnzext/: CMakeLists.txt  NotSymmetricBezierPotential.cpp  NotSymmetricExpPotential.cpp
toonz/sources/tnztools/: cuttertool.cpp  fullcolorerasertool.cpp  geometrictool.cpp  pumptool.cpp  shifttracetool.cpp  tool.cpp  toolhandle.cpp  tooloptions.cpp  tooloptionscontrols.cpp  vectorselectiontool.cpp  vectorselectiontool.h  viewtools.cpp
toonz/sources/toonz/: CMakeLists.txt  castselection.cpp  cleanuppopup.cpp  cleanupsettingsmodel.cpp  cleanupsettingspane.cpp  colormodelviewer.cpp  colormodelviewer.h  commandbarpopup.cpp  convertpopup.cpp  dvitemview.cpp  filebrowser.cpp  (+66 more)
(+124 files in other folders)
